# playground

./: .gitattributes  .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: gh-pages.yml
algorithms/algorithm-core-concepts.pub/: index.html
algorithms/coding-and-debugging-principles.pub/: index.html
algorithms/grind75/: longest-substring-without-repeating-characters.cpp  two-sum.cpp
algorithms/problem-solving-guide.pub/: index.html
assets/stylesheets/: kami.css
blog/: index.html  mkdocs.yml  pyproject.toml
content/backend/rust/board-api/: .dockerignore  .env.example  Cargo.toml  README.md  docker-compose.yml
content/backend/rust/board-api/blog/: 00-rust-board-overview.pub.md  01-cargo-and-module-system.pub.md  02-rust-types-and-structs.pub.md  03-ownership-option-result.pub.md  04-async-tokio-and-main.pub.md  05-app-state-and-routing.pub.md  06-seaorm-entity-and-db.pub.md  07-service-layer-crud.pub.md  08-error-handling-with-thiserror.pub.md  09-dto-and-serde.pub.md  10-rest-api-handlers.pub.md  11-server-side-rendering-askama.pub.md  12-integration-tests.pub.md  13-putting-it-all-together.pub.md  doc-plan.md
content/backend/rust/board-api/src/: error.rs  lib.rs
content/backend/rust/board-api/src/routes/: mod.rs  post.rs  web.rs
content/backend/rust/board-api/src/services/: post.rs
content/backend/rust/board-api/src/web/: mod.rs  response.rs  view.rs
content/backend/rust/board-api/templates/: error.html  list.html
docs/: .pages
search/: search_index.json
(+474 files in other folders)
