[package]
name = "board-api"
version = "0.1.0"
edition = "2021"
description = "SQLite-backed board CRUD REST API (Axum + SeaORM)"

[dependencies]
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
sea-orm = { version = "1.1", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }

[lib]
name = "board_api"
path = "src/lib.rs"

[[bin]]
name = "board-api"
path = "src/main.rs"
